Fix map diplay on mobile

--- a/static/css/geotime.css
+++ b/static/css/geotime.css
@@ -44,8 +44,43 @@
 
 label.custom-file-label {
   font-weight: normal;
+  overflow: hidden;
+  white-space: nowrap;
+  padding-right: 110px;
+  text-overflow: ellipsis;
 }
 
 label.custom-file-label:after {
   content: "Parcourir...";
+}
+
+#mapButtons a:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+#mapButtons a {
+  margin-left: 0px;
+}
+
+#set-point-manual {
+  margin-top: 10px;
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  #mapButtons a {
+    flex-direction: row;
+  }
+
+  #mapButtons a:not(:last-child) {
+    margin-bottom: 0px;
+  }
+
+  #mapButtons a:not(:first-child) {
+    margin-left: 10px;
+  }
+
+  #set-point-manual {
+    margin-top: 0px;
+  }
 }
